@@ -4,6 +4,7 @@ v2.1.0 (2019.06.xx)
   - Remove "Use network broadcast for device discovery" setting
   - Add "Use HTTP cloud-based device discovery" advanced setting
   - Fix bug causing multi-homed HDHomeRun devices from being detected during broadcast device discovery
+  - Use HTTP POST method when modifying backend recording rules
 
 v2.0.3 (2019.05.20)
   - Adapt to HDHomeRun RECORD engine 20190516beta2 breaking changes
